Change grid to flex in adaptive; Tried Media queries

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -61,20 +61,22 @@ ul, li{
 
 
 // to %
-@function prc($pxOne, $pxTwo){
-    $result: math.div($pxOne, $pxTwo) * 100%;
-    @return $result;
-}
+// @function prc($pxOne, $pxTwo){
+//     $result: math.div($pxOne, $pxTwo) * 100%;
+//     @return $result;
+// }
 // to REM
-@function rem($px){
-    $result: math.div($px, 16) + rem;
+@function rem($num){
+    $result: #{($num/ 16) + rem};
+    // $result: #{math.div($num, 16) + rem};
     @return $result;
 }
+
 // to EM
-@function em($px){
-    $result: math.div($px, 16) + em;
-    @return $result;
-}
+// @function em($px){
+//     $result: math.div($px, 16) + em;
+//     @return $result;
+// }
 
 
             // New style code
@@ -149,24 +151,27 @@ ul, li{
                 .section-wrapper{
                     // @include section;
                     .project__wrapper{
-                        // display: flex;
-                        // flex-wrap: wrap;
+                        display: flex;
+                        flex-wrap: wrap;
                         // row-gap: 28px;
-                        // margin: 0 -14px;                        
-                        display: grid;
-                        grid-template-columns: repeat(auto-fit, minmax(rem(528), 1fr));
+                        margin: 0 -14px;                        
+                        // display: grid;
+                        // grid-template-columns: repeat(auto-fit, minmax(rem(528), 1fr));
                         // grid-template-columns: repeat(auto-fit, minmax(rem(345), 1fr));
                         // grid-template-columns: 1fr 1fr 1fr;
-                        gap: 28px;
+                        // gap: 28px;
                         .project__content{
                             display: flex;
                             flex-direction: column;
                             position: relative;
+                            min-width: 200px;
+                            flex-grow: 1;
                             // width: fit-content;
-                            // padding: 0 14px;
+                            padding: 0 14px;
                             img{
                                 // padding: 0 0 prc(352, 528) 0;
                                 // width: 528px;
+                                max-width: 100%;
                                 cursor: pointer;
                             }
                             p{
@@ -356,3 +361,44 @@ ul, li{
 .section-wrapper{
     @include section;
 }
+
+
+
+// // Small devices (landscape phones, 576px and up)
+// @media (min-width: 576px) {
+//     ...
+// }
+
+// // Medium devices (tablets, 768px and up)
+// @media (min-width: 768px) {
+//     ...
+// }
+
+// Large devices (desktops, 992px and up)
+@media (max-width: 992px) {
+    .header__navigation{
+        display: none !important;
+    }
+    
+    .contacts__what-we-do{
+        display: none !important;
+    }
+    .contacts__place-a-meeting{
+        width: 70% !important;
+        margin: 0 auto;
+    }
+    .more-projects-btn-text{
+        padding: rem(4) rem(12) !important;
+        width: fit-content !important;
+    }
+}
+
+// // X-Large devices (large desktops, 1200px and up)
+// @media (min-width: 1200px) {
+//     ...
+// }
+
+// // XX-Large devices (larger desktops, 1400px and up)
+// @media (min-width: 1400px) {
+//     ...
+// }
