--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -57,6 +57,7 @@ ul, li{
 }
 
 
+
             // New style__functions
 
 
@@ -71,10 +72,10 @@ ul, li{
     @return $result;
 }
 // to EM
-@function em($px){
-    $result: math.div($px, 16) + em;
-    @return $result;
-}
+// @function em($px){
+//     $result: math.div($px, 16) + em;
+//     @return $result;
+// }
 
 
             // New style code
