--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -119,7 +119,8 @@ ul, li {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  padding: 0 14px;
+  width: calc((100% - 56px) / 3);
+  padding: 0 14px 28px 14px;
 }
 .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content img {
   max-width: 100%;
@@ -141,21 +142,25 @@ ul, li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 28px;
 }
 .page__main .page__content .page__container .page__projects .section-wrapper .project__more-projects .more-projects-btn {
-  border: 1px solid #292929;
   margin: 0 auto;
   padding: 0;
   cursor: pointer;
 }
-.page__main .page__content .page__container .page__projects .section-wrapper .project__more-projects .more-projects-btn .more-projects-btn-text {
+.page__main .page__content .page__container .page__projects .section-wrapper .project__more-projects .more-projects-btn:hover {
+  background-color: #c2c2c2;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+.page__main .page__content .page__container .page__projects .section-wrapper .project__more-projects .more-projects-btn-text {
   color: #000;
   font-size: 0.875rem;
-  font-weight: 500;
+  font-weight: 700;
   letter-spacing: 0.5em;
-  width: 366px;
+  width: 368px;
   padding: 0.25rem 2.625rem;
+  border: 1px solid #292929;
   text-transform: uppercase;
 }
 .page__main .page__content .page__container .page__contacts .contacts .contacts__container {
@@ -269,17 +274,26 @@ ul, li {
   display: flex;
 }
 .page__main .page__content .page__container .page__contacts .contacts .contacts__container .contacts__place-a-meeting .contacts__place-a-meeting-container .contacts__submit .submit-btn {
+  margin: 0 auto;
+  padding: 0;
+  cursor: pointer;
   color: #000;
-  font-size: 1.125rem;
-  text-align: center;
-  border: #000 1px solid;
+  font-size: 0.875rem;
   font-weight: 700;
   letter-spacing: 0.5em;
+  width: 368px;
+  padding: 0.25rem 2.625rem;
+  border: 1px solid #292929;
+  text-transform: uppercase;
+  font-size: 1.125rem;
   width: 175px;
   padding: 0.125rem 0;
   margin: 0 auto auto auto;
-  text-transform: uppercase;
-  cursor: pointer;
+}
+.page__main .page__content .page__container .page__contacts .contacts .contacts__container .contacts__place-a-meeting .contacts__place-a-meeting-container .contacts__submit .submit-btn:hover {
+  background-color: #c2c2c2;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .page__footer .page__container {
