--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -115,18 +115,18 @@ ul, li {
       -ms-flex-direction: column;
           flex-direction: column;
   position: relative;
-  min-width: 200px;
+  min-width: 332px;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
   width: calc((100% - 56px) / 3);
   padding: 0 14px 28px 14px;
 }
-.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content img {
+.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__photo {
   max-width: 100%;
   cursor: pointer;
 }
-.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content p {
+.page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__text {
   font-size: 0.75rem;
   font-weight: 300;
   width: -webkit-fit-content;
@@ -142,6 +142,7 @@ ul, li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  text-decoration: none;
 }
 .page__main .page__content .page__container .page__projects .section-wrapper .project__more-projects .more-projects-btn {
   margin: 0 auto;
