--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -54,9 +54,15 @@ $text-color: #000;
     padding: 0;
     cursor: pointer;
 
+    &:visited{
+        background-color: transparent;
+    }
     &:hover{
         background-color: #c2c2c2;
         transition: all .5s ease;
+    }
+    &:active{
+        background-color: transparent;
     }
 }
 @mixin btn_content {
@@ -71,9 +77,17 @@ $text-color: #000;
 }
 @mixin text_hover {
     border-bottom: transparent solid 1px;
+    &:visited{
+        background-color: transparent;
+        border-bottom: #727272 solid 1px;
+    }
     &:hover{
-    border-bottom: #727272 solid 1px;
-    transition: all .5s ease;
+        border-bottom: #727272 solid 1px;
+        transition: all .5s ease;
+    }
+    &:active{
+        background-color: transparent;
+        border-bottom: #727272 solid 1px;
     }
 }
 
@@ -357,12 +371,14 @@ ul, li{
                     font-size: $fz14;
                     line-height: rem(20);
                     letter-spacing: 0.02em;
+                    @include text_hover;
                 }
+                
                 .contacts__adress{
-
                 }
                 .contacts__e-mail{
-
+                    cursor: pointer;
+                    width: fit-content;
                 }
                 .contacts__tel{
 
