--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -101,6 +101,9 @@ ul, li {
   background-color: transparent;
   border-bottom: #727272 solid 1px;
 }
+.page__main .page__header .page__container .page__nav-bar .header__navigation li a img {
+  height: 24px;
+}
 .page__main .page__content {
   margin-top: 112px;
 }
