--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -239,19 +239,42 @@ ul, li{
                     }
                     .project__more-projects{
                         display: flex;
-                        text-decoration: none;
-                        .more-projects-btn{                            
-                            @include btn_container;
-                        }
-                        .more-projects-btn-text{
-                            @include btn_content;
-                        }
+                        text-decoration: none;                        
                     }
                 }
             }
 
             .page__about-us{
+                .about-us{
+                    .about-us__container{
+                        display: flex;
+                        flex-wrap: wrap;
+                        margin: 0 -14px;
+                        .emp-block{
+                            display: flex;
+                            flex-direction: column;
+                            position: relative;
+                            flex-grow: 1;
+                            min-width: 555px;                            
+                            width: calc((100% - 56px) / 3);
+                            padding: 0 14px 28px 14px;
 
+                            .emp-block__photo{
+                                // min-width: 528px;
+                                max-width: 100%;
+                            }
+                            .emp-block__name{
+
+                            }
+                            .emp-block__position{
+
+                            }
+                        }
+                    }
+                    .about-us__more-btn{
+
+                    }
+                }
             }
 
             .page__contacts{
@@ -409,6 +432,12 @@ ul, li{
     @include section;
 }
 
+.more-btn{                            
+    @include btn_container;
+}
+.more-btn-text{
+    @include btn_content;
+}
 
 
 
