--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -169,12 +169,6 @@ ul, li {
   background-color: transparent;
   border-bottom: #727272 solid 1px;
 }
-.page__main .page__content .page__container .page__projects .section-wrapper .project__more-projects {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  text-decoration: none;
-}
 .page__main .page__content .page__container .page__about-us .about-us .about-us__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -313,16 +307,14 @@ ul, li {
   display: flex;
 }
 .page__main .page__content .page__container .page__contacts .contacts .contacts__container .contacts__place-a-meeting .contacts__place-a-meeting-container .contacts__submit .submit-btn {
-  margin: 0 auto;
-  padding: 0;
   cursor: pointer;
+  width: 368px;
+  padding: 0.25rem 2.625rem;
+  border: 1px solid #292929;
   color: #000;
   font-size: 0.875rem;
   font-weight: 700;
   letter-spacing: 0.5em;
-  width: 368px;
-  padding: 0.25rem 2.625rem;
-  border: 1px solid #292929;
   text-transform: uppercase;
   font-size: 1.125rem;
   width: 175px;
@@ -381,6 +373,10 @@ ul, li {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+  pointer-events: none;
+}
+.page__footer .page__container .footer__contact-info .contacts .contacts__tel {
+  pointer-events: none;
 }
 .page__footer .page__container .footer__contact-info .privacy-policy {
   display: -webkit-box;
@@ -408,31 +404,37 @@ ul, li {
 }
 
 .more-btn {
-  margin: 0 auto;
-  padding: 0;
-  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
-.more-btn:visited {
+.more-btn .more-section-btn {
+  cursor: pointer;
+  width: 368px;
+  padding: 0.25rem 2.625rem;
+  border: 1px solid #292929;
+}
+.more-btn .more-section-btn:visited {
   background-color: transparent;
 }
-.more-btn:hover {
+.more-btn .more-section-btn:hover {
   background-color: #c2c2c2;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
-.more-btn:active {
+.more-btn .more-section-btn:active {
   background-color: transparent;
 }
-
-.more-btn-text {
+.more-btn .more-section-btn .more-btn-text {
   color: #000;
   font-size: 0.875rem;
   font-weight: 700;
   letter-spacing: 0.5em;
-  width: 368px;
-  padding: 0.25rem 2.625rem;
-  border: 1px solid #292929;
   text-transform: uppercase;
+  text-decoration: none;
 }
 
 @media (max-width: 1670px) {
@@ -473,5 +475,13 @@ ul, li {
 @media (max-width: 768px) {
   .contacts__place-a-meeting {
     width: 100% !important;
+  }
+
+  .contacts__tel {
+    pointer-events: visible !important;
+  }
+
+  .contacts__e-mail {
+    pointer-events: visible !important;
   }
 }
