--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -48,12 +48,14 @@ $text-color: #000;
     padding: 112px 0 0 0;
 }
 
-@mixin btn_container {
-    // width: 368px;
-    margin: 0 auto;
-    padding: 0;
-    cursor: pointer;
 
+@mixin btn_container {
+    cursor: pointer;
+    width: 368px;
+    padding: rem(4) rem(42);
+    border: 1px solid #292929;
+    
+    
     &:visited{
         background-color: transparent;
     }
@@ -65,16 +67,16 @@ $text-color: #000;
         background-color: transparent;
     }
 }
-@mixin btn_content {
+
+@mixin btn_text{
     color: $text-color;
     font-size: $fz14;
     font-weight: 700;
     letter-spacing: 0.5em;
-    width: 368px;
-    padding: rem(4) rem(42);
-    border: 1px solid #292929;
+    
     text-transform: uppercase;
 }
+
 @mixin text_hover {
     border-bottom: transparent solid 1px;
     &:visited{
@@ -120,6 +122,7 @@ ul, li{
     color: $text-color;
     text-decoration: none;
 }
+
 
  
 
@@ -238,8 +241,7 @@ ul, li{
                         
                     }
                     .project__more-projects{
-                        display: flex;
-                        text-decoration: none;                        
+                        
                     }
                 }
             }
@@ -272,7 +274,6 @@ ul, li{
                         }
                     }
                     .about-us__more-btn{
-
                     }
                 }
             }
@@ -359,7 +360,7 @@ ul, li{
                                     display: flex;
                                     .submit-btn{
                                         @include btn_container;                        
-                                        @include btn_content;                                        
+                                        @include btn_text;                                        
                                         font-size: $fz18;
                                         width: 175px;
                                         padding: rem(2) 0;
@@ -406,9 +407,10 @@ ul, li{
                 .contacts__e-mail{
                     cursor: pointer;
                     width: fit-content;
+                    pointer-events: none
                 }
                 .contacts__tel{
-
+                    pointer-events: none
                 }
             }
             .privacy-policy{
@@ -433,10 +435,15 @@ ul, li{
 }
 
 .more-btn{                            
-    @include btn_container;
-}
-.more-btn-text{
-    @include btn_content;
+    display: flex;
+    justify-content: center;
+    .more-section-btn{
+        @include btn_container;
+        .more-btn-text{
+            @include btn_text;
+            text-decoration: none;
+        }
+    }
 }
 
 
@@ -446,11 +453,13 @@ ul, li{
     .page__container {
       max-width: 1200px !important;
     }
+    
 }
   @media (max-width: 1200px) {
     .page__container {
       max-width: 970px !important;
     }
+    
   }
   @media (max-width: 992px) {
     .page__container {
@@ -471,14 +480,20 @@ ul, li{
         padding: rem(4) rem(12) !important;
         width: fit-content !important;
     }
-  }
-  @media (max-width: 768px) {
+}
+@media (max-width: 768px) {
     // .page__container {
-    // //   max-width: none !important;
-    // }
-    .contacts__place-a-meeting{
-        width: 100% !important;
-    }
+        // //   max-width: none !important;
+        // }
+        .contacts__place-a-meeting{
+            width: 100% !important;
+        }
+        .contacts__tel {
+            pointer-events: visible !important;
+        }
+        .contacts__e-mail{
+            pointer-events: visible !important;
+        }
   }
 //   @media (max-width: 600px) {
 //     .page__container {
